--- a/Objects/index.html
+++ b/Objects/index.html
@@ -43,7 +43,7 @@
   </style>
 </head>
 <body>
-  <h1>JavaScript Array Methods</h1>
+  <h1>JavaScript Objects</h1>
   <script src="script.js"></script>
 </body>
 </html>
