--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-        
-    </style>
-</head>
-<body>
+    <style></style>
+  </head>
+  <body>
     <button id="actionBtn">Click Me</button>
-  <p id="statusText">Waiting for action...</p>
+    <p id="statusText">Waiting for action...</p>
 
-  <script src="script.js"></script>  
-</body>
+    <label for="username">Type something:</label>
+    <input type="text" id="username" placeholder="Your text here..." />
+    <p>You are typing: <span id="liveText"></span></p>
+
+    <script src="script.js"></script>
+  </body>
 </html>
