Pushing html and js

--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -14,6 +14,16 @@
     <input type="text" id="username" placeholder="Your text here..." />
     <p>You are typing: <span id="liveText"></span></p>
 
+    <label for="colorSelect">Choose a color:</label>
+<select id="colorSelect">
+  <option value="">--Please choose an option--</option>
+  <option value="Red">Red</option>
+  <option value="Green">Green</option>
+  <option value="Blue">Blue</option>
+</select>
+
+<p id="choiceText">Your choice will appear here.</p>
+
     <script src="script.js"></script>
   </body>
 </html>
