--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -7,6 +7,7 @@
     <style>
       /* Basic Reset & Body Styling */
       body {
+        
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Helvetica, Arial, sans-serif;
         background-color: #b4cae3;
@@ -97,6 +98,12 @@
         color: #e74c3c;
         font-weight: bold;
       }
+      #mouse{
+        width: 300px;
+        height: 300px;
+        background-color: #e74c3c;
+
+      }
     </style>
   </head>
   <body>
@@ -122,6 +129,9 @@
         <option value="Blue">Blue</option>
       </select>
       <p id="choiceText">Your choice will appear here.</p>
+    </div>
+
+    <div id="mouse">
     </div>
 
     <script src="script.js"></script>
