--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -99,6 +99,7 @@
         font-weight: bold;
       }
       #mouse{
+        position: relative;
         width: 300px;
         height: 300px;
         background-color: #e74c3c;
@@ -133,6 +134,8 @@
 
     <div id="mouse">
     </div>
+
+    
 
     <script src="script.js"></script>
   </body>
