--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -141,7 +141,7 @@
     </div>
 
     <div id="mouse"></div>
-    <div id="mouse2"></div>
+    <!--  <div id="mouse2"></div>  Remove the comment to see the the mousemove event -->
 
     <script src="script.js"></script>
   </body>
