--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -17,7 +17,7 @@
         margin: 0;
         padding: 2rem;
         position: relative;
-        overflow: hidden;
+        /*overflow: hidden;*/
         
       }
 
@@ -142,6 +142,13 @@
 
     <div id="mouse"></div>
     <!--  <div id="mouse2"></div>  Remove the comment to see the the mousemove event -->
+      <ul>
+        <li>Mango</li>
+        <li>Coconut</li>
+        <li>Jackfruit</li>
+        <li>Apple</li>
+        <li>Papaya</li>
+      </ul>
 
     <script src="script.js"></script>
   </body>
