Updating js and html

--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -113,6 +113,9 @@
         height: 300px;
         background-color: #880088;
       }
+      .lt{
+        text-decoration: line-through;
+      }
     </style>
   </head>
   <body>
@@ -142,13 +145,24 @@
 
     <div id="mouse"></div>
     <!--  <div id="mouse2"></div>  Remove the comment to see the the mousemove event -->
-      <ul>
+      
+    <!--Using simple style properties  -->
+    <ul>
         <li>Mango</li>
         <li>Coconut</li>
         <li>Jackfruit</li>
         <li>Apple</li>
         <li>Papaya</li>
-      </ul>
+      </ul> 
+    <!--Using toggle with a class lt -->
+    
+    <ol>
+        <li>Mango</li>
+        <li>Coconut</li>
+        <li>Jackfruit</li>
+        <li>Apple</li>
+        <li>Papaya</li>
+      </ol>
 
     <script src="script.js"></script>
   </body>
