--- a/Event-Handling/index.html
+++ b/Event-Handling/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -204,7 +203,12 @@
         <li>Papaya</li>
       </ol>
     </div>
-
+    <div>
+      <h2>This is a live Character counter</h2>
+      <input type="text" id="char-input" placeholder="Enter you input here" />
+      <h2>Total Character's left <span id="count">20</span></h2>
+    </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
