--- a/Froms-and-form-validation/index.html
+++ b/Froms-and-form-validation/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        *{
-            
+        body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
+        
     </style>
 </head>
 <body>
-    <form >
+    <form>
         <input type="name" placeholder="Enter name"><br><br>
         <input type="email" placeholder="Enter email"><br><br>
         <input type="password" placeholder="Enter the password"><br><br>
