--- a/Froms-and-form-validation/index.html
+++ b/Froms-and-form-validation/index.html
@@ -10,14 +10,14 @@
             align-items: center;
             justify-content: center;
         }
-        
+
     </style>
 </head>
 <body>
     <form>
-        <input type="name" placeholder="Enter name"><br><br>
-        <input type="email" placeholder="Enter email"><br><br>
-        <input type="password" placeholder="Enter the password"><br><br>
+        <input type="name" placeholder="Enter name" id="name"><br><br>
+        <input type="email" placeholder="Enter email" id="email"><br><br>
+        <input type="password" placeholder="Enter the password" id="password"><br><br>
         <input type="submit"> 
     </form>
     
