--- a/Froms-and-form-validation/index.html
+++ b/Froms-and-form-validation/index.html
@@ -15,11 +15,15 @@
 </head>
 <body>
     <form>
-        <input type="name" placeholder="Enter name" id="name"><br><br>
+        <input type="name" placeholder="Enter name" id="name">
+        <br>
+        <small hidden id="nameerror">Please enter a valid name</small>
+        <br>
         <input type="email" placeholder="Enter email" id="email"><br><br>
         <input type="password" placeholder="Enter the password" id="password"><br><br>
         <input type="submit"> 
     </form>
+    <script src="script.js"></script>
     
 </body>
 </html>
