--- a/Froms-and-form-validation/index.html
+++ b/Froms-and-form-validation/index.html
@@ -6,16 +6,27 @@
     <title>Document</title>
     <style>
         body{
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             display: flex;
             align-items: center;
             justify-content: center;
         }
-
+        #nameerror{
+            color: red;
+        }
+        form{
+            margin-top: 10%;
+            min-width: 150px;
+            min-height: 200px;
+            padding: 10px;
+            border: 1px solid black;
+        }
     </style>
 </head>
 <body>
-    <form>
-        <input type="name" placeholder="Enter name" id="name">
+
+    <form autocomplete="off">
+        <input required type="name" placeholder="Enter name" id="name">
         <br>
         <small hidden id="nameerror">Please enter a valid name</small>
         <br>
