--- a/Froms-and-form-validation/index.html
+++ b/Froms-and-form-validation/index.html
@@ -30,8 +30,11 @@
         <br>
         <small hidden id="nameerror">Please enter a valid name</small>
         <br>
-        <input type="email" placeholder="Enter email" id="email"><br><br>
-        <input type="password" placeholder="Enter the password" id="password"><br><br>
+        <input type="email" placeholder="Enter email" id="email"><br>
+        <small hidden ID="emailerror">Please enter a valid email</SMall><br>
+        <input type="password" placeholder="Enter the password" id="password"><br>
+        <small hidden id="passworderror"></small>
+        <br>
         <input type="submit"> 
     </form>
     <script src="script.js"></script>
