--- a/Froms-and-form-validation/index.html
+++ b/Froms-and-form-validation/index.html
@@ -36,8 +36,10 @@
         <br>
         <small id="nameerror"></small>
         <br>
-        <input type="email" placeholder="Enter email" id="email"><br><br> 
+        <input type="email" placeholder="Enter email" id="email"><br>
+        <small id="emailerror"></small><br> 
         <input type="password" placeholder="Enter the password" id="password"><br>
+        <small id="passworderror"></small>
         <br>
         <input type="submit"> 
     </form>
