--- a/Timers-and-Intervals/index.html
+++ b/Timers-and-Intervals/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
 
     <div class="w-full max-w-md p-6">
-        <h1 class="text-xl font-semibold text-center text-gray-700 mb-3">Download Progress</h1>
+        <h1 class="text-xl font-semibold text-center text-gray-700 mb-3">Downloading</h1>
         
         <!-- Progress Bar Container -->
         <div class="w-full bg-gray-200 rounded-full">
