--- a/Timers-and-Intervals/index.html
+++ b/Timers-and-Intervals/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Progress Bar</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+      #hide {
+        width: 200px;
+        height: 200px;
+        background-color: red;
+      }
     </style>
-</head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-
+  </head>
+  <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="w-full max-w-md p-6">
-        <h1 class="text-xl font-semibold text-center text-gray-700 mb-3">Downloading</h1>
-        
-        <!-- Progress Bar Container -->
-        <div class="w-full bg-gray-200 rounded-full">
-            <!-- The inner bar that will grow -->
-            <div id="progress-bar-inner" class="bg-blue-500 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full" style="width: 0%">
-               <!-- The percentage text will be updated here -->
-               <span id="progress-percentage">0%</span>
-            </div>
+      <h1 class="text-xl font-semibold text-center text-gray-700 mb-3">
+        Downloading
+      </h1>
+
+      <!-- Progress Bar Container -->
+      <div class="w-full bg-gray-200 rounded-full">
+        <!-- The inner bar that will grow -->
+        <div
+          id="progress-bar-inner"
+          class="bg-blue-500 text-xs font-medium text-blue-100 text-center p-0.5 leading-none rounded-full"
+          style="width: 0%"
+        >
+          <!-- The percentage text will be updated here -->
+          <span id="progress-percentage">0%</span>
         </div>
+      </div>
     </div>
 
+    <div id="hide"></div>
+
     <script src="script.js"></script>
-    
-</body>
+  </body>
 </html>
