--- a/Timers-and-Intervals/index.html
+++ b/Timers-and-Intervals/index.html
@@ -10,6 +10,12 @@
         width: 200px;
         height: 200px;
         background-color: red;
+        text-align: center;
+        align-items: center;
+      }
+      #alert-msg{
+        font-weight: 100;
+
       }
     </style>
   </head>
@@ -33,7 +39,9 @@
       </div>
     </div>
 
-    <div id="hide"></div>
+    <div id="hide">
+      <small id="alert-msg">hi</small>
+    </div>
 
     <script src="script.js"></script>
   </body>
