--- a/Timers-and-Intervals/index.html
+++ b/Timers-and-Intervals/index.html
@@ -14,8 +14,7 @@
         align-items: center;
       }
       #alert-msg{
-        font-weight: 100;
-
+        font-weight:bolder;
       }
     </style>
   </head>
