--- a/Timers-and-Intervals/index.html
+++ b/Timers-and-Intervals/index.html
@@ -15,6 +15,7 @@
       }
       #alert-msg{
         font-weight:bolder;
+       
       }
     </style>
   </head>
@@ -39,7 +40,7 @@
     </div>
 
     <div id="hide">
-      <small id="alert-msg">hi</small>
+      <small id="alert-msg">Alert : This block will be removed in 3 seconds</small>
     </div>
 
     <script src="script.js"></script>
