--- a/Event-Handling/Real-Time-Search-finder/index.html
+++ b/Event-Handling/Real-Time-Search-finder/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Search Users</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="flex flex-col gap-10 items-center">
-      <input
-        class="px-5 py-5 rounded outline-none bg-[#111] text-[#888]"
-        type="text"
-        placeholder="Search..."
-      />
-      <div class="flex gap-10">
-        <div class="card" class="flex gap-5 overflow-x-auto w-full max-w-screen-xl">
-          <img src="https://images.unsplash.com/photo-1753153402701-99e514ea84bb?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwzNHx8fGVufDB8fHx8fA%3D%3D" alt="" class="bg-img" />
+</head>
 
-          <div class="blurred-layer"></div>
-          <div class="content">
-            <h3>User 123</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-              sequi, quam omnis sapiente itaque.
-            </p>
-          </div>
+<body>
+    <div class="flex flex-col gap-10 items-center">
+        <input class="inp px-5 py-5 rounded outline-none bg-[#111] text-[#888]" type="text" placeholder="Search...">
+        <div class="cards flex gap-10">
+
         </div>
-      </div>  
     </div>
     <script src="script.js"></script>
-  </body>
+</body>
+
 </html>
