--- a/Event-Handling/Dynamic-Card-Creation/index.html
+++ b/Event-Handling/Dynamic-Card-Creation/index.html
@@ -4,34 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic ID Card Generator</title>
- <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        #form-container {
-            margin-bottom: 20px;
-        }
-        #card-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            padding: 20px;
-            width: 200px;
-        }
-        .card img {
-            width: 100%;
-            border-radius: 50%;
-        }
-    </style>
+ <link rel="stylesheet" href="style.css">>
 </head>
 <body>
     
