--- a/Toaster-Using Closure/index.html
+++ b/Toaster-Using Closure/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div class=" parent flex justify-center items-center h-screen">
-        <button id="toastButton" class="px-4 py-2 bg-blue-500 text-white rounded">Show Toast</button>
+    <div class=" fixed parent p-10 flex ">
+        
     </div>
 
    
